Fix image distortion using object-fit cover and bump stylesheet version

--- a/style/style.css
+++ b/style/style.css
@@ -209,7 +209,8 @@ main {
 #section_1 .part_1 img {
   width: 100%;
   height: 100%;
-  margin-left: -10%;
+  object-fit: cover;
+  margin-left: 0;
 }
 #section_1 .part_2 {
   padding: 5rem 2rem 2rem 0rem;
@@ -341,6 +342,7 @@ a {
 #about .part_2 .image_part img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   filter: grayscale(1);
   cursor: pointer;
   transition: all 0.2s linear;
